# trenchwars

./: Anchor.toml  DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  deploy.sh  next.config.js  package.json  setup-demo.sh  vercel.json
backend/: Dockerfile  package-lock.json  package.json  railway.toml
backend-simple/: package.json  server.js
backend/.next/: trace
backend/src/: demo-server.ts  index.ts
backend/src/config/: database.ts  mockData.ts
backend/src/middleware/: errorHandler.ts
backend/src/models/: War.ts
backend/src/routes/: bets.ts  mockData.ts  prices.ts  social.ts  users.ts  wars.ts
backend/src/services/: dexScreenerService.ts  priceService.ts  realTimePriceService.ts  rewardService.ts  socialService.ts  twitterService.ts
migrations/: 005_reward_system.sql  006_social_metrics.sql
programs/betting-contract/: Cargo.toml
programs/betting-contract/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/test/: page.tsx
src/components/: BattleCard.tsx  BetHistory.tsx  BettingModal.tsx  BottomHUD.tsx  ChaosEffects.tsx  CreateWarModal.tsx  GameificationOverlay.tsx  Header.tsx  Hero.tsx  LiveFeed.tsx  PepeCorner.tsx  PriceChart.tsx  SocialFeed.tsx  SocialMetrics.tsx  StreakDisplay.tsx  TrendingHashtags.tsx  UserProfile.tsx  WalletProvider.tsx  WarCard.tsx  WarsDashboard.tsx  WojakBubble.tsx  WojakHUD.tsx  WojakReaction.tsx  WojakSVG.tsx  WojakTest.tsx
src/config/: api.ts
src/hooks/: useMockWallet.ts  useWar.ts
src/styles/: gamification.css
src/utils/: celebrationSystem.ts  gameSystem.ts  wojakEvents.ts  wojakImageGenerator.ts
(+4 files in other folders)
