[package]
name = "betting-contract"
version = "0.1.0"
description = "Crypto betting smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "betting_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"